--- a/qemu_riscv32_mini_system_demo/config.json
+++ b/qemu_riscv32_mini_system_demo/config.json
@@ -10,8 +10,7 @@
     "force_link_libs": [
       "bootstrap",
       "abilityms",
-      "example",
-      "ability_demo"
+      "example"
     ],
     "subsystems": [
       {
