--- a/qemu_riscv32_mini_system_demo/config.json
+++ b/qemu_riscv32_mini_system_demo/config.json
@@ -120,7 +120,7 @@
         "subsystem": "security",
         "components": [
           {
-            "component": "tpm",
+            "component": "tcm",
             "features": []
           }
         ]
